--- a/.github/workflows/1-infra-deploy-destroy.yml
+++ b/.github/workflows/1-infra-deploy-destroy.yml
@@ -112,7 +112,16 @@ jobs:
             echo "Aucune clé SSH privée configurée."
           fi
 
-      # Étape 5: Initialisation de Terraform
+      # Étape 5: Téléchargement des scripts Terraform
+      - name: Download Terraform Scripts
+        id: download_scripts
+        uses: actions/download-artifact@v4
+        with:
+          name: terraform-scripts
+          path: ${{ env.TF_WORKING_DIR }}
+        continue-on-error: true
+
+      # Étape 6: Initialisation de Terraform
       - name: Terraform Init
         id: init
         run: |
@@ -154,28 +163,57 @@ jobs:
           export AWS_SECRET_ACCESS_KEY="${{ secrets.AWS_SECRET_ACCESS_KEY }}"
           export AWS_DEFAULT_REGION="${{ env.AWS_REGION }}"
 
-          terraform plan \
-            -var="aws_access_key=${{ secrets.AWS_ACCESS_KEY_ID }}" \
-            -var="aws_secret_key=${{ secrets.AWS_SECRET_ACCESS_KEY }}" \
-            -var="db_username=${{ secrets.RDS_USERNAME }}" \
-            -var="db_password=${{ secrets.RDS_PASSWORD }}" \
-            -var="db_name=${{ secrets.DB_NAME || 'yourmedia' }}" \
-            -var="ec2_key_pair_name=${{ secrets.EC2_KEY_PAIR_NAME }}" \
-            -var="github_token=${{ secrets.GH_PAT || '' }}" \
-            -var="repo_owner=${{ github.repository_owner }}" \
-            -var="repo_name=${{ github.repository }}" \
-            -var="ssh_private_key_path=~/.ssh/id_rsa" \
-            -var="ssh_private_key_content='${{ secrets.EC2_SSH_PRIVATE_KEY || '' }}'" \
-            -var="ssh_public_key='${{ secrets.EC2_SSH_PUBLIC_KEY || '' }}'" \
-            -var="enable_provisioning=${{ secrets.EC2_SSH_PRIVATE_KEY != '' }}" \
-            -var="environment=${{ github.event.inputs.environment }}" \
-            -var="tf_api_token=${{ secrets.TF_API_TOKEN }}" \
-            -var="tf_workspace_id=${{ secrets.TF_WORKSPACE_ID }}" \
-            -var="dockerhub_username=${{ secrets.DOCKERHUB_USERNAME }}" \
-            -var="dockerhub_token=${{ secrets.DOCKERHUB_TOKEN }}" \
-            -var="dockerhub_repo=${{ secrets.DOCKERHUB_REPO }}" \
-            -no-color \
-            -out=tfplan
+          # Vérifier si le fichier terraform.tfvars.scripts existe
+          if [ -f "terraform.tfvars.scripts" ]; then
+            echo "Utilisation du fichier terraform.tfvars.scripts pour les scripts..."
+            terraform plan \
+              -var="aws_access_key=${{ secrets.AWS_ACCESS_KEY_ID }}" \
+              -var="aws_secret_key=${{ secrets.AWS_SECRET_ACCESS_KEY }}" \
+              -var="db_username=${{ secrets.RDS_USERNAME }}" \
+              -var="db_password=${{ secrets.RDS_PASSWORD }}" \
+              -var="db_name=${{ secrets.DB_NAME || 'yourmedia' }}" \
+              -var="ec2_key_pair_name=${{ secrets.EC2_KEY_PAIR_NAME }}" \
+              -var="github_token=${{ secrets.GH_PAT || '' }}" \
+              -var="repo_owner=${{ github.repository_owner }}" \
+              -var="repo_name=${{ github.repository }}" \
+              -var="ssh_private_key_path=~/.ssh/id_rsa" \
+              -var="ssh_private_key_content='${{ secrets.EC2_SSH_PRIVATE_KEY || '' }}'" \
+              -var="ssh_public_key='${{ secrets.EC2_SSH_PUBLIC_KEY || '' }}'" \
+              -var="enable_provisioning=${{ secrets.EC2_SSH_PRIVATE_KEY != '' }}" \
+              -var="environment=${{ github.event.inputs.environment }}" \
+              -var="tf_api_token=${{ secrets.TF_API_TOKEN }}" \
+              -var="tf_workspace_id=${{ secrets.TF_WORKSPACE_ID }}" \
+              -var="dockerhub_username=${{ secrets.DOCKERHUB_USERNAME }}" \
+              -var="dockerhub_token=${{ secrets.DOCKERHUB_TOKEN }}" \
+              -var="dockerhub_repo=${{ secrets.DOCKERHUB_REPO }}" \
+              -var-file=terraform.tfvars.scripts \
+              -no-color \
+              -out=tfplan
+          else
+            echo "Fichier terraform.tfvars.scripts non trouvé, utilisation des variables par défaut..."
+            terraform plan \
+              -var="aws_access_key=${{ secrets.AWS_ACCESS_KEY_ID }}" \
+              -var="aws_secret_key=${{ secrets.AWS_SECRET_ACCESS_KEY }}" \
+              -var="db_username=${{ secrets.RDS_USERNAME }}" \
+              -var="db_password=${{ secrets.RDS_PASSWORD }}" \
+              -var="db_name=${{ secrets.DB_NAME || 'yourmedia' }}" \
+              -var="ec2_key_pair_name=${{ secrets.EC2_KEY_PAIR_NAME }}" \
+              -var="github_token=${{ secrets.GH_PAT || '' }}" \
+              -var="repo_owner=${{ github.repository_owner }}" \
+              -var="repo_name=${{ github.repository }}" \
+              -var="ssh_private_key_path=~/.ssh/id_rsa" \
+              -var="ssh_private_key_content='${{ secrets.EC2_SSH_PRIVATE_KEY || '' }}'" \
+              -var="ssh_public_key='${{ secrets.EC2_SSH_PUBLIC_KEY || '' }}'" \
+              -var="enable_provisioning=${{ secrets.EC2_SSH_PRIVATE_KEY != '' }}" \
+              -var="environment=${{ github.event.inputs.environment }}" \
+              -var="tf_api_token=${{ secrets.TF_API_TOKEN }}" \
+              -var="tf_workspace_id=${{ secrets.TF_WORKSPACE_ID }}" \
+              -var="dockerhub_username=${{ secrets.DOCKERHUB_USERNAME }}" \
+              -var="dockerhub_token=${{ secrets.DOCKERHUB_TOKEN }}" \
+              -var="dockerhub_repo=${{ secrets.DOCKERHUB_REPO }}" \
+              -no-color \
+              -out=tfplan
+          fi
           echo "::endgroup::"
         continue-on-error: false  # Arrête le workflow si le plan échoue
 
@@ -315,27 +353,55 @@ jobs:
 
           # Déployer l'infrastructure complète
           echo "Déploiement de l'infrastructure complète..."
-          terraform apply -auto-approve \
-            -var="aws_access_key=${{ secrets.AWS_ACCESS_KEY_ID }}" \
-            -var="aws_secret_key=${{ secrets.AWS_SECRET_ACCESS_KEY }}" \
-            -var="db_username=${{ secrets.RDS_USERNAME }}" \
-            -var="db_password=${{ secrets.RDS_PASSWORD }}" \
-            -var="db_name=${{ secrets.DB_NAME || 'yourmedia' }}" \
-            -var="ec2_key_pair_name=${{ secrets.EC2_KEY_PAIR_NAME }}" \
-            -var="github_token=${{ secrets.GH_PAT || '' }}" \
-            -var="repo_owner=${{ github.repository_owner }}" \
-            -var="repo_name=${{ github.repository }}" \
-            -var="ssh_private_key_path=~/.ssh/id_rsa" \
-            -var="ssh_private_key_content='${{ secrets.EC2_SSH_PRIVATE_KEY || '' }}'" \
-            -var="ssh_public_key='${{ secrets.EC2_SSH_PUBLIC_KEY || '' }}'" \
-            -var="enable_provisioning=${{ secrets.EC2_SSH_PRIVATE_KEY != '' }}" \
-            -var="environment=${{ github.event.inputs.environment }}" \
-            -var="tf_api_token=${{ secrets.TF_API_TOKEN }}" \
-            -var="tf_workspace_id=${{ secrets.TF_WORKSPACE_ID }}" \
-            -var="dockerhub_username=${{ secrets.DOCKERHUB_USERNAME }}" \
-            -var="dockerhub_token=${{ secrets.DOCKERHUB_TOKEN }}" \
-            -var="dockerhub_repo=${{ secrets.DOCKERHUB_REPO }}" \
-            -var="grafana_admin_password=${{ secrets.GRAFANA_ADMIN_PASSWORD }}"
+          # Vérifier si le fichier terraform.tfvars.scripts existe
+          if [ -f "terraform.tfvars.scripts" ]; then
+            echo "Utilisation du fichier terraform.tfvars.scripts pour les scripts..."
+            terraform apply -auto-approve \
+              -var="aws_access_key=${{ secrets.AWS_ACCESS_KEY_ID }}" \
+              -var="aws_secret_key=${{ secrets.AWS_SECRET_ACCESS_KEY }}" \
+              -var="db_username=${{ secrets.RDS_USERNAME }}" \
+              -var="db_password=${{ secrets.RDS_PASSWORD }}" \
+              -var="db_name=${{ secrets.DB_NAME || 'yourmedia' }}" \
+              -var="ec2_key_pair_name=${{ secrets.EC2_KEY_PAIR_NAME }}" \
+              -var="github_token=${{ secrets.GH_PAT || '' }}" \
+              -var="repo_owner=${{ github.repository_owner }}" \
+              -var="repo_name=${{ github.repository }}" \
+              -var="ssh_private_key_path=~/.ssh/id_rsa" \
+              -var="ssh_private_key_content='${{ secrets.EC2_SSH_PRIVATE_KEY || '' }}'" \
+              -var="ssh_public_key='${{ secrets.EC2_SSH_PUBLIC_KEY || '' }}'" \
+              -var="enable_provisioning=${{ secrets.EC2_SSH_PRIVATE_KEY != '' }}" \
+              -var="environment=${{ github.event.inputs.environment }}" \
+              -var="tf_api_token=${{ secrets.TF_API_TOKEN }}" \
+              -var="tf_workspace_id=${{ secrets.TF_WORKSPACE_ID }}" \
+              -var="dockerhub_username=${{ secrets.DOCKERHUB_USERNAME }}" \
+              -var="dockerhub_token=${{ secrets.DOCKERHUB_TOKEN }}" \
+              -var="dockerhub_repo=${{ secrets.DOCKERHUB_REPO }}" \
+              -var="grafana_admin_password=${{ secrets.GRAFANA_ADMIN_PASSWORD }}" \
+              -var-file=terraform.tfvars.scripts
+          else
+            echo "Fichier terraform.tfvars.scripts non trouvé, utilisation des variables par défaut..."
+            terraform apply -auto-approve \
+              -var="aws_access_key=${{ secrets.AWS_ACCESS_KEY_ID }}" \
+              -var="aws_secret_key=${{ secrets.AWS_SECRET_ACCESS_KEY }}" \
+              -var="db_username=${{ secrets.RDS_USERNAME }}" \
+              -var="db_password=${{ secrets.RDS_PASSWORD }}" \
+              -var="db_name=${{ secrets.DB_NAME || 'yourmedia' }}" \
+              -var="ec2_key_pair_name=${{ secrets.EC2_KEY_PAIR_NAME }}" \
+              -var="github_token=${{ secrets.GH_PAT || '' }}" \
+              -var="repo_owner=${{ github.repository_owner }}" \
+              -var="repo_name=${{ github.repository }}" \
+              -var="ssh_private_key_path=~/.ssh/id_rsa" \
+              -var="ssh_private_key_content='${{ secrets.EC2_SSH_PRIVATE_KEY || '' }}'" \
+              -var="ssh_public_key='${{ secrets.EC2_SSH_PUBLIC_KEY || '' }}'" \
+              -var="enable_provisioning=${{ secrets.EC2_SSH_PRIVATE_KEY != '' }}" \
+              -var="environment=${{ github.event.inputs.environment }}" \
+              -var="tf_api_token=${{ secrets.TF_API_TOKEN }}" \
+              -var="tf_workspace_id=${{ secrets.TF_WORKSPACE_ID }}" \
+              -var="dockerhub_username=${{ secrets.DOCKERHUB_USERNAME }}" \
+              -var="dockerhub_token=${{ secrets.DOCKERHUB_TOKEN }}" \
+              -var="dockerhub_repo=${{ secrets.DOCKERHUB_REPO }}" \
+              -var="grafana_admin_password=${{ secrets.GRAFANA_ADMIN_PASSWORD }}"
+          fi
 
           # Récupérer le nom du bucket S3
           S3_BUCKET_NAME=$(terraform output -raw s3_bucket_name)
