--- a/.github/workflows/1-infra-deploy-destroy.yml
+++ b/.github/workflows/1-infra-deploy-destroy.yml
@@ -405,12 +405,12 @@ jobs:
           echo "Infrastructure déployée avec succès"
           echo "::endgroup::"
 
-      # Étape 8.1: Configuration des permissions et ACL des scripts dans S3
-      - name: Configure Script Permissions and ACLs in S3
+      # Étape 8.1: Configuration des permissions des scripts dans S3
+      - name: Configure Script Permissions in S3
         id: configure_scripts
         if: github.event.inputs.action == 'apply'
         run: |
-          echo "::group::Configuration des permissions et ACL des scripts dans S3"
+          echo "::group::Configuration des permissions des scripts dans S3"
           # Créer le fichier de clé SSH si le secret est disponible
           if [ ! -z "${{ secrets.EC2_SSH_PRIVATE_KEY }}" ]; then
             mkdir -p ~/.ssh
@@ -419,7 +419,7 @@ jobs:
             echo "Clé SSH privée configurée."
           fi
 
-          echo "Configuration des permissions et ACL des scripts dans le bucket S3: ${S3_BUCKET_NAME}"
+          echo "Configuration des permissions des scripts dans le bucket S3: ${S3_BUCKET_NAME}"
 
           # Définir le chemin absolu vers le répertoire de travail
           WORKSPACE_DIR="${GITHUB_WORKSPACE}"
@@ -442,27 +442,27 @@ jobs:
           echo "Vérification des permissions des scripts shell..."
           find ${WORKSPACE_DIR}/scripts -name "*.sh" -type f -exec chmod +x {} \;
 
-          # Mettre à jour les scripts shell avec les bonnes permissions et ACL
-          echo "Mise à jour des scripts shell avec les bonnes permissions et ACL..."
-          find ${WORKSPACE_DIR}/scripts -name "*.sh" -type f -exec aws s3 cp {} s3://${S3_BUCKET_NAME}/{} --acl public-read \;
+          # Mettre à jour les scripts shell avec les bonnes permissions
+          echo "Mise à jour des scripts shell avec les bonnes permissions..."
+          find ${WORKSPACE_DIR}/scripts -name "*.sh" -type f -exec aws s3 cp {} s3://${S3_BUCKET_NAME}/{} \;
 
           # Vérifier que les scripts d'initialisation sont présents
           echo "Vérification des scripts d'initialisation..."
 
           # Scripts de monitoring
           if [ -f "${WORKSPACE_DIR}/scripts/ec2-monitoring/init-monitoring.sh" ]; then
-            echo "Script init-monitoring.sh trouvé, configuration des permissions et ACL..."
+            echo "Script init-monitoring.sh trouvé, configuration des permissions..."
             chmod +x ${WORKSPACE_DIR}/scripts/ec2-monitoring/init-monitoring.sh
-            aws s3 cp ${WORKSPACE_DIR}/scripts/ec2-monitoring/init-monitoring.sh s3://${S3_BUCKET_NAME}/scripts/ec2-monitoring/init-monitoring.sh --acl public-read
+            aws s3 cp ${WORKSPACE_DIR}/scripts/ec2-monitoring/init-monitoring.sh s3://${S3_BUCKET_NAME}/scripts/ec2-monitoring/init-monitoring.sh
           else
             echo "AVERTISSEMENT: Le script init-monitoring.sh n'a pas été trouvé."
           fi
 
           # Scripts Java/Tomcat
           if [ -f "${WORKSPACE_DIR}/scripts/ec2-java-tomcat/init-java-tomcat.sh" ]; then
-            echo "Script init-java-tomcat.sh trouvé, configuration des permissions et ACL..."
+            echo "Script init-java-tomcat.sh trouvé, configuration des permissions..."
             chmod +x ${WORKSPACE_DIR}/scripts/ec2-java-tomcat/init-java-tomcat.sh
-            aws s3 cp ${WORKSPACE_DIR}/scripts/ec2-java-tomcat/init-java-tomcat.sh s3://${S3_BUCKET_NAME}/scripts/ec2-java-tomcat/init-java-tomcat.sh --acl public-read
+            aws s3 cp ${WORKSPACE_DIR}/scripts/ec2-java-tomcat/init-java-tomcat.sh s3://${S3_BUCKET_NAME}/scripts/ec2-java-tomcat/init-java-tomcat.sh
           else
             echo "AVERTISSEMENT: Le script init-java-tomcat.sh n'a pas été trouvé."
           fi
@@ -479,14 +479,14 @@ jobs:
           # Vérifier que les scripts de surveillance sont présents
           echo "Vérification des scripts de surveillance..."
           if [ -f "${WORKSPACE_DIR}/scripts/ec2-monitoring/container-monitor.sh" ]; then
-            echo "Script container-monitor.sh trouvé, configuration des permissions et ACL..."
+            echo "Script container-monitor.sh trouvé, configuration des permissions..."
             chmod +x ${WORKSPACE_DIR}/scripts/ec2-monitoring/container-monitor.sh
-            aws s3 cp ${WORKSPACE_DIR}/scripts/ec2-monitoring/container-monitor.sh s3://${S3_BUCKET_NAME}/scripts/ec2-monitoring/container-monitor.sh --acl public-read
+            aws s3 cp ${WORKSPACE_DIR}/scripts/ec2-monitoring/container-monitor.sh s3://${S3_BUCKET_NAME}/scripts/ec2-monitoring/container-monitor.sh
           else
             echo "AVERTISSEMENT: Le script container-monitor.sh n'a pas été trouvé."
           fi
 
-          echo "Configuration des permissions et ACL des scripts terminée dans le bucket S3: ${S3_BUCKET_NAME}"
+          echo "Configuration des permissions des scripts terminée dans le bucket S3: ${S3_BUCKET_NAME}"
           echo "::endgroup::"
 
       # Étape 8.1.6: Vérification de la disponibilité des scripts dans S3
