Réorganisation de la documentation et standardisation des variables

--- a/.github/workflows/0-verification-secrets.yml
+++ b/.github/workflows/0-verification-secrets.yml
@@ -162,6 +162,7 @@ jobs:
           COMPAT_SECRETS["DOCKER_REPO"]="DOCKERHUB_REPO"
           COMPAT_SECRETS["DB_USERNAME"]="RDS_USERNAME"
           COMPAT_SECRETS["DB_PASSWORD"]="RDS_PASSWORD"
+          COMPAT_SECRETS["GRAFANA_ADMIN_PASSWORD"]="GF_SECURITY_ADMIN_PASSWORD"
 
           # Vérifier chaque paire de compatibilité
           for OLD_SECRET in "${!COMPAT_SECRETS[@]}"; do
